# rust-linux

net/ipv4/: Makefile  tcp.c  tcp.rs
scripts/: kallsyms.c
security/keys/: Makefile  key.c
security/keys/keys_rs/: Cargo.toml  Makefile  Xargo.toml  build.rs  linux_headers.h  x86_64-unknown-none-gnu.json
security/keys/keys_rs/src/: c_types.rs  io.rs  lib.rs  linux_allocator.rs  os.rs  user_ptr.rs
tools/include/linux/: kallsyms.h  lockdep.h
