[package]
name = "keys"
version = "0.1.0"
authors = ["Matthew Denton <mdenton@cs.stanford.edu>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.0"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }

[build-dependencies]
bindgen = "0.32.0"
shlex = "0.1.*"